--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -5,10 +5,9 @@
 
       <nav>
         <ul class="nav nav-pills pull-right" ng-controller="sessionCtrl as session">
-           <div data-ng-init="session.getCurrentUser();"></div>
-           <li role="presentation"><a href="#/">Home</a></li>
 
-           <li role="presentation" ng-if="user.admin"><a href="#/admin">Admin Dashboard</a></li>
+          <li ng-if= "!isAdmin" role="presentation"><a href="#/">Dashboard</a></li>
+          <li ng-if="isAdmin" role="presentation"><a href="#/admin"> Admin Dashboard</a></li>
           <li role="presentation" ng-hide="isAuthenticated"><a href="#/sign_in">Log In</a></li>
           <li role="presentation" ng-show="isAuthenticated"><a href ="javascript:" ng-click="session.logout()">Logout</a></li>
         </ul>
